# Otus.Python_basic

./: .gitignore  Readme.md
djnago_first/teacher_site/: db.sqlite3
djnago_first/teacher_site/about/: urls.py  views.py
djnago_first/teacher_site/about/templates/about/: about.html
djnago_first/teacher_site/index/: admin.py  models.py  urls.py  views.py
djnago_first/teacher_site/index/management/commands/: work.py
djnago_first/teacher_site/index/migrations/: 0001_initial.py
djnago_first/teacher_site/index/templates/index/: index.html
djnago_first/teacher_site/teacher_site/: asgi.py  settings.py  urls.py  wsgi.py
дз №1 работа с функциями/: main.py
дз №2 ООП/: .gitignore  BaseVehicle.py  Car.py  Engine1.py  Ferrari1.py  Gear1.py  MilitaryPlane.py  Plane.py  main.py
дз №3 асинхронная работа с БД/: dbs.py  request_json.py  run_main.py
дз №4 первое Web-приложение/: app.py  main.py
дз №4 первое Web-приложение/templates/: index.html
дз №5 Docker контейнер/: Dockerfile  Pipfile  Readme.md
дз №5 Docker контейнер/myflaskapp/: app.py
дз №5 Docker контейнер/myflaskapp/templates/: base.html  index.html
дз №6 Flask+SQLAlchemy; docker-compose/: .gitignore  Dockerfile  docker-compose.yaml
дз №6 Flask+SQLAlchemy; docker-compose/myflaksapp/: app.py  config.py  main.py  pyproject.toml
дз №6 Flask+SQLAlchemy; docker-compose/myflaksapp/models/: database.py  request.py
дз №6 Flask+SQLAlchemy; docker-compose/myflaksapp/templates/: about.html  base.html  user-requests.html  userrequest.html
