[tool.poetry]
name = "My first application on Flask"
version = "0.1.0"
description = "Description of the package"
authors = ["You can put your contacts here"]
license = "You are free to do anything you want with this package"

[tool.poetry.dependencies]
python = "3.8.6"
Flask = "^1.1.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

